@@ -48,7 +48,8 @@ trial loads modules named 'test_' within the given package.
 Log exceptions (and other things) to the given logfile.
 .TP
 \fB-r\fR, \fB--reactor\fR <reactor>
-Use this reactor for running the tests.
+Use this reactor for running the tests. The reactor names are the same as
+those accepted by twistd: c, qt, gtk2, and so on.
 .TP
 \fB-b\fR, \fB--debug\fR
 Run the tests in the Python debugger. Also does post-mortem
