@@ -1,3 +1,9 @@
+2003-09-29  Brian Warner  <warner@lothar.com>
+
+	* twisted/scripts/trial.py (Options.opt_reactor): make trial
+	accept the same reactor-name abbreviations as twistd does
+	* doc/man/trial.1: document the change
+
 2003-09-28  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* .: Releasing Twisted 1.0.8alpha3.
